change imports and pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,25 @@
 [project]
 name = "qsticky"
-version = "1.1"
-description = "A sticky desktop notes."
+dynamic = ["version"]
+description = "Sticky desktop notes application."
 authors = [
     { name="Feasuro", email="feasuro@pm.me" },
 ]
-license = {file = "LICENSE"}
+license = {text = "GPL-3.0-or-later"}
 readme = "README.md"
 dependencies = [
     "PyQt6>=6.7.0",
 ]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
+    "Environment :: X11 Applications :: Qt",
+    "Topic :: Desktop Environment",
+    "Intended Audience :: End Users/Desktop",
+    "Natural Language :: English",
+    "Natural Language :: Polish",
 ]
 
 [build-system]
@@ -24,9 +29,12 @@ build-backend = "setuptools.build_meta"
 [project.gui-scripts]
 qsticky = "qsticky.__main__:main"
 
-[tool.setuptools.packages.find]
-where = ["src"]
-namespaces = false
+[tool.setuptools]
+package-dir = {"" = "src"}
+packages = ["qsticky"]
+
+[tool.setuptools.dynamic]
+version = {attr = "qsticky.__version__"}
 
 [project.urls]
 Homepage = "https://github.com/Feasuro/qsticky"
