--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ classifiers = [
     "Natural Language :: Polish",
 ]
 
+[project.optional-dependencies]
+postgre = ["psycopg2"]
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
@@ -31,7 +34,10 @@ qsticky = "qsticky.__main__:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
-packages = ["qsticky"]
+packages = [
+    "qsticky",
+    "qsticky.data",
+]
 
 [tool.setuptools.dynamic]
 version = {attr = "qsticky.__version__"}
