--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
 
 [project.optional-dependencies]
 postgre = ["psycopg2"]
+mysql = ["mysqlclient"]
 
 [build-system]
 requires = ["setuptools>=61.0"]
